Add login endpoints
