# services/user/user_handler.go
@@ -1,8 +1,11 @@
 package user
 
 import (
-	"github.com/gin-gonic/gin"
 	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"golang.org/x/crypto/bcrypt"
+	"tuaysa.com/middleware"
 	"tuaysa.com/pkg/response"
 )
 
@@ -62,4 +65,127 @@ func (h *UserHandler) GetAllUsers(c *gin.Context) {
 	}
 
 	response.Success(c, http.StatusOK, "Retrieved users successfully", users)
+}
+
+// @Summary Get user by username
+// @Description Get user by username
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param id path string true "User username"
+// @Success 200 {object} UserResponse "User retrieved successfully"
+// @Failure 400 {object} map[string]interface{} "Invalid request format or parameters"
+// @Failure 404 {object} map[string]interface{} "User not found"
+// @Failure 500 {object} map[string]interface{} "Internal server error"
+// @Router /user/{username} [get]
+func (h *UserHandler) GetUserByUsername(c *gin.Context) {
+	username := c.Param("username")
+	user, err := h.Repo.GetUserByUsername(c.Request.Context(), username)
+	if err != nil {
+		response.Error(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	if user == nil {
+		response.Error(c, http.StatusNotFound, "User not found")
+		return
+	}
+
+	response.Success(c, http.StatusOK, "Retrieved user successfully", user)
+}
+
+// @Summary Get user by email
+// @Description Get user by email
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param email path string true "User email"
+// @Success 200 {object} UserResponse "User retrieved successfully"
+// @Failure 400 {object} map[string]interface{} "Invalid request format or parameters"
+// @Failure 404 {object} map[string]interface{} "User not found"
+// @Failure 500 {object} map[string]interface{} "Internal server error"
+// @Router /user/email/{email} [get]
+func (h *UserHandler) GetUserByEmail(c *gin.Context) {
+	email := c.Param("email")
+	user, err := h.Repo.GetUserByEmail(c.Request.Context(), email)
+	if err != nil {
+		response.Error(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	if user == nil {
+		response.Error(c, http.StatusNotFound, "User not found")
+		return
+	}
+
+	response.Success(c, http.StatusOK, "Retrieved user successfully", user)
+}
+
+// @Summary Login user
+// @Description Login user
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param user body LoginRequest true "User login credentials"
+// @Success 200 {object} LoginResponse "User logged in successfully"
+// @Failure 400 {object} map[string]interface{} "Invalid request format or parameters"
+// @Failure 401 {object} map[string]interface{} "Invalid credentials"
+// @Failure 500 {object} map[string]interface{} "Internal server error"
+// @Router /user/login [post]
+func (h *UserHandler) LoginUser(c *gin.Context) {
+	var reqPayload LoginRequest
+	if err := c.ShouldBindJSON(&reqPayload); err != nil {
+		response.Error(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	user, err := h.Repo.GetUserByEmail(c.Request.Context(), reqPayload.Email)
+	if err != nil {
+		response.Error(c, http.StatusNotFound, "User not found")
+		return
+	}
+
+	if err := bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(reqPayload.Password)); err != nil {
+		response.Error(c, http.StatusUnauthorized, "Invalid credentials")
+		return
+	}
+
+	token, err := middleware.GenerateJWTToken(user.Email, user.Username)
+	if err != nil {
+		response.Error(c, http.StatusInternalServerError, "An error occurred while processing your request")
+		return
+	}
+
+	userRes := UserResponse{
+		ID:        user.ID.Hex(),
+		Username:  user.Username,
+		Email:     user.Email,
+		FirstName: user.FirstName,
+		LastName:  user.LastName,
+		Phone:     user.Phone,
+	}
+
+	response.Success(c, http.StatusOK, "User logged in successfully", LoginResponse{
+		Token: token,
+		User:  userRes,
+	})
+}
+
+// @Summary Get current user
+// @Description Get current user
+// @Tags users
+// @Accept json
+// @Produce json
+// @Success 200 {object} UserResponse "User retrieved successfully"
+// @Failure 500 {object} map[string]interface{} "Internal server error"
+// @Security BearerAuth
+// @Router /user/current [get]
+func (h *UserHandler) GetCurrentUser(c *gin.Context) {
+	user, err := h.Repo.GetUserByEmail(c.Request.Context(), c.GetString("email"))
+	if err != nil {
+		response.Error(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	response.Success(c, http.StatusOK, "Retrieved user successfully", user)
 }
